# AI-Motion-VFX-Studio

./: .dockerignore  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  session.py
.github/workflows/: ci.yml
ai/: __init__.py  audio_analyzer.py  emotion_detector.py  gesture_classifier.py  pose_detector.py
dashboard/: app.py
models/: gesture_model.py
osc/: __init__.py  sender.py
scripts/: download_models.py
static/: index.html
tests/: test_audio_analyzer.py  test_config.py  test_emotion_detector.py  test_gesture_classifier.py  test_gesture_model.py  test_session.py
