[project]
name = "ai-motion-vfx"
version = "1.0.0"
description = "Real-time AI motion tracking pipeline for interactive VFX with TouchDesigner"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "F0F8FF" }]
keywords = ["ai", "vfx", "motion-tracking", "touchdesigner", "mediapipe", "pytorch", "osc"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mediapipe>=0.10.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "python-osc>=1.8.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "websockets>=11.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
audio = ["librosa>=0.10.0", "sounddevice>=0.4.6"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "ruff>=0.1.0"]

[project.urls]
Homepage = "https://github.com/F0F8FF/ai-motion-vfx"
Repository = "https://github.com/F0F8FF/ai-motion-vfx"
Issues = "https://github.com/F0F8FF/ai-motion-vfx/issues"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
